@@ -105,6 +105,7 @@ export(calc_TLLxTxRatio)
 export(calc_ThermalLifetime)
 export(calc_WodaFuchs2008)
 export(calc_gSGC)
+export(convert_Activity2Concentration)
 export(convert_BIN2CSV)
 export(convert_Daybreak2CSV)
 export(convert_PSL2CSV)
